# python-starter-template

./: .commitlintrc.yml  .copier-answers.yml.jinja  .dockerignore  .editorconfig  .env  .env.dev  .env.dev.local-example  .env.local  .env.local-example  .env.production  .env.production.backend  .env.production.frontend  .env.shared  .env.test  .envrc  .gitignore  .gitleaks.toml  .gitleaksignore  .localias.yaml  .service-versions  .squawk.toml  .tool-versions  AGENTS.md  CHANGELOG.md  GEMINI.md  Justfile  Justfile.test  Procfile  README.md  SETUP.md  TODO  alembic.ini  bootstrap.sh  commands.md  console.py  copier.yml  docker-compose.yml  instructions.md  lefthook-local.yml  lefthook.yml  (+11 more)
.claude/commands/: dev-in-browser.md
.config/: mise.dev.local-example.toml  mise.dev.toml  mise.extras.toml  mise.local-example.toml  mise.local.toml-template  mise.toml
.copier/: .copier-answers.yml.jinja  README.md  bootstrap.py  bootstrap.sh  pick_unique_ports.py  rq.py  update.sh
.cursor/: settings.json
.cursor/commands/: typescript-docstring.md
.cursor/rules/: alembic-migrations.mdc  fastapi.mdc  fix-tests.mdc  general.mdc  pytest-integration-tests.mdc  pytest-tests.mdc  python-app.mdc  python-route-tests.mdc  python.mdc  react-router.mdc  react.mdc  shell.mdc  stripe-backend.mdc  typescript.mdc
.gemini/commands/: dev-in-browser.toml  fastapi_stripe.toml  fix-tests.toml  implement-fastapi-routes.toml  plan-only.toml  python-command.toml  react-router-client-loader.toml  refactor-on-instructions.toml  secrets.toml  standalone-python-scripts.toml  stripe-backend.toml  typescript-docstring.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: alembic-migrations.instructions.md  fastapi.instructions.md  just.instructions.md  pytest-integration-tests.instructions.md  pytest-tests.instructions.md  python-app.instructions.md  python-route-tests.instructions.md  python.instructions.md  react-router.instructions.md  react.instructions.md  shell.instructions.md  typescript.instructions.md
.github/prompts/: dev-in-browser.prompt.md  fastapi_stripe.prompt.md  fix-tests.prompt.md  refactor-on-instructions.prompt.md  secrets.prompt.md  typescript-docstring.prompt.md
.github/workflows/: build_and_publish.yml
.opencode/commands/: fastapi_stripe.md
app/: __init__.py  celery.py  constants.py  emailer.py  env.py  environments.py  errors.py  jobs.py  react_router_routes.py  server.py  setup.py  templates.py  typeid_sqlalchemy.py
app/cli/: __init__.py  __main__.py  generate_typed_routes.py
app/commands/: __init__.py
app/configuration/: clerk.py  database.py  debugging.py  emailer.py  lang.py  logging.py  openai.py  patches.py  posthog.py  redis.py  sentry.py  signals.py  versions.py
app/factories/: __init__.py  clerk.py  user.py
app/helpers/: facebook.py
app/jobs/: __init__.py  async.py  clerk_sync.py  only_once.py  process_webhook.py  sync.py
app/lib/: model_slug.py  stripe.py
app/models/: __init__.py  llm_cache.py  llm_response.py  typeid_sqlalchemy.py  user.py  webhook_event.py
app/routes/: AGENTS.md  admin.py  api.py  authenticated.py  errors.py  healthcheck.py  internal.py  middleware.py  static.py  unauthenticated.py  unauthenticated_html.py
app/utils/: address.py  async.py  debug.py  geoip.py  geolocation.py  lang.py  openapi.py  patching.py  timing.py
env/: all.local-example.sh  all.sh  dev.local-example.sh  dev.sh  not_production.sh  production.backend.sh  production.frontend.sh  test.sh
env/env/: all.local.sh
infra/azure/: .envrc  Justfile  azure_features.tf  azure_smtp_email.tf  cloud-init-data-disk.yaml  deployment_state.tf  dokku_vm.tf  locals.tf  openai.tf  providers.tf  ssh_key.justfile  variables.tf
infra/dokku/: Justfile  app.json
just/: build.just  ci.just  database.just  dev.just  direnv.just  docker.just  github.just  javascript.just  python.just  secrets.just  setup.just  utils.just
migrations/: env.py  sanitize_production.py  seed.py  utils.py
migrations/versions/: 2024_11_22_309313a0e742_initial_commit.py  2024_11_25_e9668f245f97_initial_commit.py  2024_11_26_bb721c611ba5_initial_commit.py  2024_11_26_e24353e9b4a5_initial_commit.py  2024_11_27_b73ead68e53f_initial_commit.py  2024_12_02_1517de38c6de_initial_commit.py  2024_12_04_bf79f7d05134_initial_commit.py  2025_02_07_3f26dfe42f06_initial_commit.py  2025_02_08_098ff6b3974d_initial_commit.py  2025_02_08_15a00a794f42_initial_commit.py  2025_02_08_6cdb25df74a9_initial_commit.py  2025_02_08_bd93b08d387a_initial_commit.py  2025_02_08_f11650864ca3_initial_commit.py  2025_02_12_78de1f4da50f_initial_commit.py  2025_02_13_189cc8291528_initial_commit.py  2025_03_04_7c1c1ea02e20_initial_commit.py  2025_03_27_489aff797e2e_add_typeid_sql_helpers.py  2025_04_03_cf868c4d11b7_initial_commit.py  2025_09_24_816d99f62e46_base_models.py  2025_10_14_bc53e85ae2b6_base_models.py  2025_11_03_45cb46f82351_base_models.py  2025_11_08_0782ae000489_base_models.py  2025_11_28_8f5dbc1f07ba_add_service_token_to_user.py  5d2ce1e64454_initial_commit.py  72b39011b346_initial_commit.py  7898cd42e3d4_initial_commit.py
playground/: automatic_sqlmodel_relationships.py  celery_db_session.py  docker_hosts.py  fastapi_custom_route_names.py  pytest_httpx_intercept.py  rate_limiting_celery_jobs.py  realip_ipv6.py  server-thread-limiter.py  tty_reporting.py
scripts/: backfill_service_token.py
tests/: AGENTS.md  __init__.py  assertions.py  concurrent_tests.py  conftest.py  constants.py  data.py  direnv.py  factories.py  log.py  raw_utils.py  seeds.py  test_openapi_schema.py  util.py  utils.py
tests/factories/: __init__.py
tests/fixtures/: .gitkeep
tests/functional/: version_test.py
tests/integration/: AGENTS.md  clerk.py  (+8 more)
web/: .depcheckrc.yml  .dockerignore  .gitignore  .npmrc  .prettierignore  .tool-versions  components.json  eslint.config.js  expose-globals.ts  mise.toml  openapi-ts.config.ts  openapi.json  package.json  playground.ts  pnpm-lock.yaml  pnpm-workspace.yaml  react-router.config.ts  tailwind.config.ts  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts
(+120 files in other folders)
