[project]
name = "python-starter-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "activemodel>=0.2.0",
    "aiosmtplib>=3.0.2",
    "alembic>=1.14.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.3",
    "celery-once>=3.0.1",
    "celery[redis]>=5.4.0",
    "clerk-backend-api>=1.3.1",
    "click>=8.1.7",
    "css-inline>=0.14.3",
    "fastapi[standard]>=0.115.3",
    "funcy-pipe>=0.11.1",
    "ipython>=8.28.0",
    "jinja2>=3.1.4",
    "mailers>=3.1.0",
    "markdown2>=2.5.1",
    "openai>=1.52.2",
    "orjson>=3.10.11",
    "posthog>=3.7.0",
    "psycopg[binary]>=3.2.3",
    "python-decouple-typed>=3.11.0",
    "redis>=5.2.0",
    "sentry-sdk[fastapi]>=2.17.0",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "structlog>=24.4.0",
    "typeid-python>=0.3.1",
    "uvicorn>=0.32.0",
    # TODO remove once other packages are updated
    "watchfiles==0.24.0",
]

[dependency-groups]
debugging-extras = [
    "colorama>=0.4.6",
    "datamodel-code-generator>=0.26.3",
    "debugpy>=1.8.8",
    "docrepr>=0.2.0",
    "ipython-autoimport",
    "ipython-ctrlr-fzf>=0.2.1",
    "ipython-suggestions>=1.0.0",
    "ipythonclipboard>=1.0b2",
    "jedi>=0.19.2",
    "pdbr[ipython]>=0.8.9",
    "pretty-traceback>=2024.1021",
    "pyfzf>=0.3.1",
    "sqlparse>=0.5.2",
]

[tool.uv]
dev-dependencies = [
    "covdefaults>=2.3.0",
    "coverage>=7.6.7",
    "deptry>=0.20.0",
    "ipython>=8.28.0",
    "pretty-traceback>=2024.1021",
    "pyright>=1.1.386",
    "pytest-asyncio>=0.24.0",
    "pytest-celery>=1.1.3",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "djlint>=1.36.1",
    "pytest-sugar>=1.0.0",
    "j2lint>=1.1.0",
    "pytest-playwright>=0.6.2",
]
# https://github.com/astral-sh/uv/issues/3898
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
j2lint = { git = "https://github.com/aristanetworks/j2lint.git" }

# TODO https://github.com/astral-sh/uv/issues/9258
# https://docs.astral.sh/uv/reference/settings/#override-dependencies
# override-dependencies = [
#     "-e activemodel @ file:///Users/mike/Projects/python/python-starter-template/pypi/activemodel#egg=activemodel[dev]",
# ]

[tool.uv.sources.djlint]
git = "https://github.com/iloveitaly/djLint.git"
rev = "github-output"

[tool.djlint]
ignore = "H030,H031"

[tool.ruff]
extend-exclude = [
    "playground",
    "playground.py",
    "migrations/env.py",
    "migrations/versions/*.py",
]
force-exclude = true

[tool.pyright]
exclude = [
    ".venv",
    # exclude our local package clones
    "pypi",
    # sometimes python code can be bundled in node repos
    "web/node_modules",
    # migrations are autogen'd
    "migrations/versions",
    "playground.py",
    # don't make playing less fun and force types
    "playground",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
# TODO huh, maybe we should use anyio instead?
# aynio is installed by some other packages and it's plugin is discovered automatically, we disable it in favor of asyncio
addopts = "--pdbcls=pdbr:RichPdb --disable-warnings --screenshot=only-on-failure --tracing=retain-on-failure -p no:anyio"
# must be session to align with playwright expectations
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
# avoid depreciation warnings causing spammy logs
filterwarnings = ["ignore::DeprecationWarning"]
# by default, pytest seems to hijack many logs and output them to the terminal
# this is nice if you don't have a custom login like we do
testpaths = "tests"
norecursedirs = ["pypi"]
debug_file = "tmp/pytestdebug.log"

log_cli = false
[tool.uv.sources.activemodel]
git = "https://github.com/iloveitaly/activemodel.git"

[tool.uv.sources.ipython-autoimport]
git = "https://github.com/anntzer/ipython-autoimport.git"

[tool.uv.sources.ipython-suggestions]
git = "https://github.com/iloveitaly/ipython-suggestions.git"
rev = "py-13"

[tool.uv.sources.mailers]
git = "https://github.com/iloveitaly/mailers.git"
rev = "custom"
