[project]
name = "python-starter-template"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "activemodel>=0.2.0",
    "aiosmtplib>=3.0.2",
    "alembic>=1.14.0",
    "alembic-postgresql-enum>=1.6.1",
    "backoff>=2.2.1",
    "cachetools>=5.5.1",
    "celery-once>=3.0.1",
    "celery[redis]>=5.4.0",
    "clerk-backend-api>=3.3.1",
    "css-inline>=0.14.3",
    "fastapi[standard]>=0.115.3",
    "flower>=2.0.1",
    "funcy-pipe>=0.11.1",
    "ipython>=8.28.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "mailers>=3.1.0",
    "markdown2>=2.5.1",
    "openai>=1.52.2",
    "orjson>=3.10.11",
    "posthog>=3.7.0",
    "psycopg[binary]>=3.2.3",
    "environs>=14.0.0",
    "redis[hiredis]>=5.2.0",
    "sentry-sdk[fastapi,celery,openai,sqlalchemy]>=2.17.0",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.31",
    "starlette-context>=0.3.6",
    "structlog>=24.4.0",
    "typeid-python[cli]>=0.3.2",
    "typer>=0.14.0",
    "uvicorn>=0.32.0",
    "pydantic[email,timezone]",
    "celery-types>=0.23.0",
    "furl>=2.1.4",
    "structlog-config[fastapi]",
    "textcase>=0.4.0",
    "whenever>=0.7.3",
    "celery-healthcheck>=0.1.1",
    "celery-redbeat>=2.3.2",
    "ipython-playground>=0.3.0",
    "stripe>=12.1.0",
    "usaddress>=0.5.16",
    "facebook-business>=23.0.1",
    "beautiful-traceback>=0.3.0",
]

[dependency-groups]
# helpful for debugging and development, but completely optional for the core dev loop
debugging-extras = [
    "datamodel-code-generator>=0.26.3",
    "debugpy>=1.8.8",
    "docrepr>=0.2.0",
    "httpdbg>=0.31.1",
    "hunter>=3.9.0",
    "icecream>=2.1.4",
    "ipdb>=0.13.13",
    "ipython>=9.0.2",
    "ipython-autoimport",
    "ipython-ctrlr-fzf>=0.2.1",
    "ipython-suggestions>=1.0.0",
    "ipythonclipboard>=1.0b2",
    "pdbr[ipython]>=0.8.9",
    "pre-commit>=4.1.0",
    "psutil>=6.1.0",
    "pudb>=2024.1.3",
    "py-spy>=0.4.0",
    "pyfzf>=0.3.1",
    "pytest-fzf>=0.1.2.post1",
    "rich>=13.9.4",
    "rpdb>=0.2.0",
    "sqlparse>=0.5.2",
]
dev = [
    "covdefaults>=2.3.0",
    "coverage>=7.6.7",
    "deptry>=0.20.0",
    "ipython>=8.28.0",
    "pyright[nodejs]>=1.1.386",
    "pytest-asyncio>=1.2.0",
    "pytest-celery[redis]>=1.1.3",
    "pytest-celery-utils>=0.1.2",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "pytest-httpx>=0.35.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "djlint>=1.36.1",
    "pytest-sugar>=1.0.0",
    "j2lint>=1.1.0",
    "pytest-playwright>=0.6.2",
    "pytest-cov>=6.0.0",
    "pytest-timer[termcolor]>=1.0.0",
    "gitignore-parser>=0.1.11",
    "pytest-playwright-visual-snapshot",
    "flexmock>=0.12.2",
    "polyfactory>=2.20.0",
    "squawk-cli>=2.33.2",
    "detect-shadowed-modules>=0.1.0",
    "generate-fastapi-typed-routes>=0.3.2",
    "react-router-routes>=0.4.0",
    "pytest-playwright-artifacts>=0.1.0",
    "pytest-line-runner>=0.1.0",
]

# this configuration is VERY important! Without this `--no-editable` flag when building for production will
# install the project package in the venv folder which changes the path that the application is operating out of and
# causes the application code to be duplicated
[tool.uv]
package = false

# this eliminates the need for `editable_mode = "strict"` and other config that was previously required
[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

# flat layout (default for app/ at root)
[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""
module-name = "app"

[tool.ruff]
extend-exclude = [
    "playground",
    "playground.py",
    "migrations/env.py",
    "migrations/versions/*.py",
    "tests/conftest.py",
    ".copier",
    "tmp",
]
force-exclude = true

[tool.pyright]
exclude = [
    ".venv",
    # exclude our local package clones
    "pypi",
    # sometimes python code can be bundled in node repos
    "web/node_modules",
    # migrations are autogen'd
    "migrations/versions",
    "playground.py",

    # don't make playing less fun and force types
    "playground",
    ".copier",
    "tmp",
]
# https://github.com/microsoft/pylance-release/blob/71dcf9409c5ba65f1138069ac80ae9e2122d7867/USING_WITH_PYRIGHT.md
# the above documentation seems out of date: autoSearchPaths and extraPaths is deprecated
extraPaths = []               # Include paths from PYTHONPATH env var and .env definition
typeCheckingMode = "standard"

[tool.djlint]
ignore = "H030,H031"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
section-order = [
    # https://docs.astral.sh/ruff/settings/#lint_isort_section-order
    "future",
    "standard-library",
    "third-party",
    "first-party",
    # custom ordering
    "orm",
    "tests",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
orm = ["sqlmodel", "activemodel", "sqlalchemy", "app.models.*"]
tests = ["tests"]

# NOTE prefer conftest.py over toml configuration for pytest
[tool.pytest.ini_options]
addopts = [
    "-p no:logging",
    "--capture=no",
    "--import-mode=importlib",
    "--structlog-output=tmp/test-results/test-logs",
]
filterwarnings = [
    # avoid depreciation warnings causing spammy logs
    "ignore::DeprecationWarning",
    # raise level of these errors
    "error:RuntimeWarning",
]
# by default, pytest seems to hijack many logs and output them to the terminal
# this is nice if you don't have a custom login like we do
testpaths = "tests"
# TODO would love if we could move this to conftest.py and put in the artifact folder
debug_file = "tmp/pytestdebug.log"
# TODO right now this option does not enable us to get it directly
asyncio_default_test_loop_scope = "function"
asyncio_default_fixture_loop_scope = "function"

# https://coverage.readthedocs.io/en/latest/config.html#run-data-file
[tool.coverage.run]
omit = ["tests/*", "migrations/*"]
# data_file = "tmp/test-results/.coverage"

[tool.uv.sources]
flower = { git = "https://github.com/iloveitaly/flower", rev = "custom" }
ipdb = { git = "https://github.com/iloveitaly/ipdb", rev = "support-executables" }

[tool.uv.sources.djlint]
git = "https://github.com/iloveitaly/djLint.git"
rev = "github-output"

[tool.uv.sources.polyfactory]
git = "https://github.com/iloveitaly/polyfactory.git"
rev = "custom"

[tool.uv.sources.docker]
git = "https://github.com/docker/docker-py.git"
rev = "orbstack-socket"

# https://github.com/gruns/icecream/pull/226
[tool.uv.sources.icecream]
git = "https://github.com/iloveitaly/icecream.git"
rev = "exclude-tests"

[tool.uv.sources.activemodel]
git = "https://github.com/iloveitaly/activemodel.git"

[tool.uv.sources.structlog-config]
git = "https://github.com/iloveitaly/structlog-config.git"

[tool.uv.sources.beautiful-traceback]
git = "https://github.com/iloveitaly/beautiful-traceback.git"

[tool.uv.sources.pytest-playwright-artifacts]
git = "https://github.com/iloveitaly/pytest-playwright-artifacts.git"
